# agentic-audit

./: .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: claude-code.md  codex.md  cowork.md  index.md  langchain.md  mcp-server.md  policy.md  self-hosting.md
docs/api-reference/: authentication.md  compliance.md  events.md  openapi.json  policy.md  systems.md
docs/concepts/: framework-mapping.md  hooks-architecture.md  pii-detection.md  policy-system.md  risk-classification.md  risk-scoring.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: audit-claude-code-session.md  enterprise-deployment.md  export-compliance-report.md  paranoid-mode.md  slack-alerts.md
docs/integrations/: claude-code.md  codex.md  cowork.md  crewai.md  langchain.md  rest-api.md
docs/self-hosting/: database.md  docker.md  upgrading.md
docs/stylesheets/: extra.css
plugins/cowork/: README.md
plugins/cowork/.claude-plugin/: plugin.json
plugins/cowork/hooks/: hooks.json
plugins/cowork/skills/audit-awareness/: SKILL.md
scripts/: generate_openapi.py
tests/: conftest.py  test_classification_unit.py  test_codex.py  test_codex_parser.py  test_compliance.py  test_dashboard.py  test_edge_cases.py  test_events.py  test_hook.py  test_langchain.py  test_mcp.py  test_otlp.py  test_pii.py  test_policy.py  test_production.py  test_query.py  test_risk.py  test_rules_engine.py  test_sdk.py  test_systems.py
